# image-classification-api

./: .gitignore  LICENSE  README.md  package.json
lya/: README.md  pyproject.toml  train.py
lya-model/: model.json
lya/src/: __init__.py  train.py
src/: app.module.ts
src/lya/: lya.controller.spec.ts  lya.controller.ts  lya.module.ts  lya.service.spec.ts  lya.service.ts
test/: app.e2e-spec.ts
