[tool.poetry]
name = "lya"
version = "0.1.0"
description = ""
authors = ["peeeuzin <canaldopedrinho233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.12.0"
tensorflowjs = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
